--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,55 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+
+    <meta
+      name="keywords"
+      content="Design Co, Design at UCSD, UCSD, UC San Diego, design, HCI, HCD"
+    />
+    <meta property="og:title" content="Design Co" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="We’re a strong and scrappy design community at UC San Diego, bridging the gap between young designers and industry. Previously known as Design at UCSD."
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
+    <meta
+      property="og:description"
+      content="We’re a strong and scrappy design community at UC San Diego, bridging the gap between young designers and industry. Previously known as Design at UCSD."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/preview.png" />
+
+    <!-- Favicons -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="%PUBLIC_URL%/favicons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="%PUBLIC_URL%/favicons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="%PUBLIC_URL%/favicons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="%PUBLIC_URL%/favicons/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="%PUBLIC_URL%/favicons/safari-pinned-tab.svg"
+      color="#000000"
+    />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicons/favicon.ico" />
+    <meta name="msapplication-TileColor" content="#000000" />
+    <meta
+      name="msapplication-config"
+      content="%PUBLIC_URL%/favicons/browserconfig.xml"
+    />
+    <meta name="theme-color" content="#000000" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
