--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-84330975-1"
+      src="https://www.googletagmanagesr.com/gtag/js?id=UA-84330975-1"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
