optimize about images attempt

--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,9 @@
       function gtag() {
         dataLayer.push(arguments);
       }
-      gtag("js", new Date());
+      gtag('js', new Date());
 
-      gtag("config", "UA-84330975-1");
+      gtag('config', 'UA-84330975-1');
     </script>
 
     <meta
@@ -80,6 +80,78 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- <link rel="preload" as="image" href="%PUBLIC_URL%/about/7.jpg" />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/about/8.jpg" />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/about/9.jpg" />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/about/10.jpg" />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/about/11.jpg" />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/about/12.jpg" />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/about/13.jpg" />
+    <link
+      rel="preload"
+      as="image"
+      href="%PUBLIC_URL%/team-photos/emilyyu.png"
+    />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/team-photos/grace.png" />
+    <link
+      rel="preload"
+      as="image"
+      href="%PUBLIC_URL%/team-photos/jonathan.png"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="%PUBLIC_URL%/team-photos/sabrina.png"
+    />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/team-photos/megan.png" />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/team-photos/juna.png" />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/team-photos/leann.png" />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/team-photos/ricky.png" />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/team-photos/thoa.png" />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/team-photos/shawn.png" />
+    <link
+      rel="preload"
+      as="image"
+      href="%PUBLIC_URL%/team-photos/meshach.png"
+    />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/team-photos/tracey.png" />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/team-photos/brian.png" />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/team-photos/jodie.png" />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/team-photos/donna.png" />
+    <link
+      rel="preload"
+      as="image"
+      href="%PUBLIC_URL%/team-photos/jocelyn.png"
+    />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/team-photos/sujana.png" />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/team-photos/mandy.png" />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/team-photos/esther.png" />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/team-photos/maria.png" />
+    <link
+      rel="preload"
+      as="image"
+      href="%PUBLIC_URL%/team-photos/catherine.png"
+    />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/team-photos/elise.png" />
+    <link
+      rel="preload"
+      as="image"
+      href="%PUBLIC_URL%/team-photos/tiffany.png"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="%PUBLIC_URL%/team-photos/emilyjao.png"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="%PUBLIC_URL%/team-photos/frances.png"
+    />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/team-photos/hannah.png" />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/team-photos/kayla.png" />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/team-photos/rainee.png" />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/team-photos/brian.png" /> -->
 
     <title>Design Co</title>
   </head>
