--- a/public/index.html
+++ b/public/index.html
@@ -80,14 +80,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <!-- <link rel="preload" as="image" href="%PUBLIC_URL%/about/7.jpg" />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/about/7.jpg" />
     <link rel="preload" as="image" href="%PUBLIC_URL%/about/8.jpg" />
     <link rel="preload" as="image" href="%PUBLIC_URL%/about/9.jpg" />
     <link rel="preload" as="image" href="%PUBLIC_URL%/about/10.jpg" />
     <link rel="preload" as="image" href="%PUBLIC_URL%/about/11.jpg" />
     <link rel="preload" as="image" href="%PUBLIC_URL%/about/12.jpg" />
     <link rel="preload" as="image" href="%PUBLIC_URL%/about/13.jpg" />
-    <link
+    <!-- <link
       rel="preload"
       as="image"
       href="%PUBLIC_URL%/team-photos/emilyyu.png"
