optimize about page images

--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,9 @@
       function gtag() {
         dataLayer.push(arguments);
       }
-      gtag('js', new Date());
+      gtag("js", new Date());
 
-      gtag('config', 'UA-84330975-1');
+      gtag("config", "UA-84330975-1");
     </script>
 
     <meta
@@ -80,13 +80,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="preload" as="image" href="%PUBLIC_URL%/about/7.jpg" />
+    <!-- <link rel="preload" as="image" href="%PUBLIC_URL%/about/7.jpg" />
     <link rel="preload" as="image" href="%PUBLIC_URL%/about/8.jpg" />
     <link rel="preload" as="image" href="%PUBLIC_URL%/about/9.jpg" />
     <link rel="preload" as="image" href="%PUBLIC_URL%/about/10.jpg" />
     <link rel="preload" as="image" href="%PUBLIC_URL%/about/11.jpg" />
     <link rel="preload" as="image" href="%PUBLIC_URL%/about/12.jpg" />
-    <link rel="preload" as="image" href="%PUBLIC_URL%/about/13.jpg" />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/about/13.jpg" /> -->
     <!-- <link
       rel="preload"
       as="image"
