--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
+    <!-- <script
       async
       src="https://www.googletagmanagesr.com/gtag/js?id=UA-84330975-1"
-    ></script>
+    ></script> -->
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
